--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:'Times New Roman', Times, serif
+}
+
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+
+  
 }
